--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,18 @@ dependencies:
 
   # state management
   provider: ^6.0.4
-  # image
-  image: ^3.0.2
+#  # image
+#  image: ^3.0.2
   path_provider: ^2.0.11
-  photo_view: ^0.14.0
+#  photo_view: ^0.14.0
   # with this ref fix `Looking up a deactivated widget's ancestor is unsafe`.
   #photo_view:
   #  git:
   #    url: https://github.com/bluefireteam/photo_view
   #    ref: 8156907eecfa812b181a5a729d790f6d399f311b
   image_gallery_saver: ^2.0.3
-  #own packages
-  gallery_media_picker: ^0.1.0
+#  #own packages
+#  gallery_media_picker: ^0.1.0
 
 
   modal_gif_picker: ^0.0.2
