remove-gif-code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
 #  gallery_media_picker: ^0.1.0
 
 
-  modal_gif_picker: ^0.0.2
+ # modal_gif_picker: ^0.0.2
   # painting
   perfect_freehand: ^1.0.4
   # positioning
