--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
 #  #own packages
 #  gallery_media_picker: ^0.1.0
 
-
- # modal_gif_picker: ^0.0.2
+  modal_gif_picker:
+    git: https://github.com/MuhamedFaraag/modal_gif_picker
   # painting
   perfect_freehand: ^1.0.4
   # positioning
