--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: stories_editor
 description: This is a package created in the style of the instagram story creator, with which you can create images with images, texts, stickers (Gifs), finger drawing.
 version: 0.2.2
-homepage: https://github.com/camilo1498/stories_editor
+homepage: https://github.com/MuhamedFaraag/StoryDashWhitePackage
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -13,17 +13,17 @@ dependencies:
   # state management
   provider: ^6.0.4
 #  # image
-#  image: ^3.0.2
+  image: ^3.0.2
   path_provider: ^2.0.11
-#  photo_view: ^0.14.0
+  photo_view: ^0.14.0
   # with this ref fix `Looking up a deactivated widget's ancestor is unsafe`.
-  #photo_view:
-  #  git:
-  #    url: https://github.com/bluefireteam/photo_view
-  #    ref: 8156907eecfa812b181a5a729d790f6d399f311b
+#  photo_view:
+#    git:
+#      url: https://github.com/bluefireteam/photo_view
+#      ref: 8156907eecfa812b181a5a729d790f6d399f311b
   image_gallery_saver: ^2.0.3
 #  #own packages
-#  gallery_media_picker: ^0.1.0
+  gallery_media_picker: ^0.1.0
 
   modal_gif_picker:
     git: https://github.com/MuhamedFaraag/modal_gif_picker
